--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/fontawesome-free": "^6.7.2",
     "flowbite": "^2.5.2",
     "jspdf": "^2.5.2",
+    "jspdf-autotable": "^3.8.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
